examples/test/testpolicy1462.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1462
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key0: value15
      key20: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value13
          key39: value33
          key10: value48
      podSelector:
        matchLabels:
          key32: value6
